syntax = "proto3";
option optimize_for = SPEED;

message TableName {
	string schema = 1;
	string table = 2;
	int64 tableID = 3;
	int64 partition = 4;
}

message Column {
	bytes type = 1;
    uint64 flag= 2;
	bytes value = 3;
}

message ColumnInfo {
	string name = 1;
	bytes type = 2;
}

message TableInfo {
	string schema = 1;
	string table = 2;
	int64 tableID = 3;
	repeated ColumnInfo columnInfo = 4;
}

message RowChangedEvent {
	uint64 startTs = 1;
	uint64 commitTs = 2;

	int64 rowID = 3;

	TableName table = 4;

	bool delete = 5;

	uint64 tableInfoVersion = 6;

	string indieMarkCol = 7;
	map<string, Column> columns = 8;
	map<string, Column> preColumns = 9;
	repeated string keys = 10;
}

message DDLEvent {
	uint64 startTs = 1;
	uint64 commitTs = 2;
	TableInfo tableInfo = 5;
	TableInfo preTableInfo = 6;
	string query = 7;

	bytes type = 8;
}


